fable/test/valid/character_1_f90.f
      program prog
      character(1) str
      str = 'x'
      write(6, *) str
      end
