fable/test/semantic_error/inquire_no_unit_no_file.f
      program prog
      logical lexist
      inquire(exist=lexist)
      end
